# julia_project

./: .gitignore  .pylintrc  LICENSE.md  MANIFEST.in  README.md  _setup.py  requirements.txt  setup.cfg  setup.py
examples/myjuliamod/: MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.py
examples/myjuliamod/myjuliamod/: Project.toml  __init__.py  _julia_project.py  _myjuliamod.py  hellomod.py
examples/myjuliamod/myjuliamod/sys_image/: Project.toml  compile_julia_project.jl  packages.jl
julia_project/: __init__.py  _jill_install.py  _julia_project.py  _julia_system_image.py  _utils.py  _version.py  activate_project.py  calljulia.py  find_julia.py  install.py  jill_install.py  julia_system_image.py  juliacall.py  pyjulia.py  questions.py  utils.jl  utils.py
julia_project/examples/myjuliamod/: MANIFEST.in
julia_project/examples/myjuliamod/myjuliamod/: _julia_project.py
julia_project/tests/: test_init.py  test_project.py
src/julia_project/: __init__.py  _julia_project.py  calljulia.py  environment.py  julia_system_image.py  juliacall.py  lib.py  questions.py  utils.py
src/julia_project/examples/myjuliamod/: requirements.txt
src/julia_project/examples/myjuliamod/myjuliamod/: Project.toml  _julia_project.py  hellomod.py
src/julia_project/examples/myjuliamod/myjuliamod/sys_image/: Project.toml  compile_exercise_script.jl  packages.jl
src/julia_project/tests/: test_project.py
