[tool:pytest]
norecursedirs = .* scripts build dist conda-recipe

# https://github.com/pytest-dev/pytest/issues/1445
[easy_install]
zip_ok = 0

[options.package_data]
julia_project =
              *.toml
              *.jl
              examples/myjuliamod/README.md
              examples/myjuliamod/MANIFEST.in
              examples/myjuliamod/*.txt
              examples/myjuliamod/setup.py
              examples/myjuliamod/myjuliamod/*.py
              examples/myjuliamod/myjuliamod/Project.toml
              examples/myjuliamod/myjuliamod/sys_image/*.jl
              examples/myjuliamod/myjuliamod/sys_image/Project.toml
