[metadata]
name = julia_project
author = John Lapeyre
version = attr: julia_project.__version__
description = Manage Julia dependency in a Python module
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
project_urls =
home = http://github.com/jlapeyre/julia_project


[options]
zip_safe = False
packages = find:
package_dir =
    =src

install_requires =
       julia>=0.2
       juliacall>=0.6.1
       find_julia>=0.2.5
       julia_project_basic>=0.1.4

[options.packages.find]
where = src

[tool:pytest]
norecursedirs = .* scripts build dist

# https://github.com/pytest-dev/pytest/issues/1445
[easy_install]
zip_ok = 0


[options.package_data]
julia_project =
              *.toml
              *.jl
              examples/myjuliamod/README.md
              examples/myjuliamod/MANIFEST.in
              examples/myjuliamod/*.txt
              examples/myjuliamod/setup.py
              examples/myjuliamod/myjuliamod/*.py
              examples/myjuliamod/myjuliamod/Project.toml
              examples/myjuliamod/myjuliamod/sys_image/*.jl
              examples/myjuliamod/myjuliamod/sys_image/Project.toml
